--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -8,14 +8,13 @@
     width: 100%;
   }
 
-mat-card {
-    width: 80%;
-    margin: auto;
-}
-
 mat-form-field,
 textarea {
     width: 100%;
+}
+
+mat-card {
+    margin-top: 1.5em;
 }
 
  
