--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -10,11 +10,7 @@
 <!--ngForm gives access to form object -->
 <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-card>
-            <!-- input field for post's title -->
-            <mat-card-subtitle>
-                <h2>Title</h2>
-            </mat-card-subtitle>
-        
+            <!-- input field for post's title -->  
             <mat-form-field>
                 <!-- ngModel gives access to form field -->
                 <input 
@@ -23,6 +19,7 @@
                 type="text" 
                 name="title" 
                 #title="ngModel" 
+                placeholder="Post Title"
                 required>
                 <mat-error *ngIf="title.invalid">Please enter a title</mat-error>
             </mat-form-field>
@@ -39,6 +36,7 @@
                 ngModel 
                 name="content" 
                 #content="ngModel" 
+                placeholder="Post Content"
                 required></textarea>
                 <mat-error *ngIf="content.invalid">Please enter some content</mat-error>
             </mat-form-field>   
