--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -4,6 +4,16 @@
             {{ post.title }}
         </mat-expansion-panel-header>
         <p>{{ post.content }}</p>
+
+        <!-- actions button -->
+        <mat-action-row>
+            <button mat-button color="primary">EDIT</button>
+        </mat-action-row>
+
+        <mat-action-row>
+            <button mat-button color="warn">DELETE</button>
+        </mat-action-row>
+
     </mat-expansion-panel>
 </mat-accordion>
 
