Edit page will now display data even after refreshing

--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -7,7 +7,7 @@
 
         <!-- actions button -->
         <mat-action-row>
-            <button mat-button color="primary">EDIT</button>
+            <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
         </mat-action-row>
 
         <mat-action-row>
