--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -8,14 +8,14 @@
 
 <!-- template driven form -->
 <!--ngForm gives access to form object -->
-<form (submit)="onAddPost(postForm)" #postForm="ngForm">
+<form (submit)="onSavePost(postForm)" #postForm="ngForm">
     <mat-card>
             <!-- input field for post's title -->  
             <mat-form-field>
                 <!-- ngModel gives access to form field -->
                 <input 
                 matInput 
-                ngModel 
+                [ngModel]="post?.title"
                 type="text" 
                 name="title" 
                 #title="ngModel" 
@@ -29,7 +29,7 @@
                 <textarea 
                 matInput 
                 rows="4" 
-                ngModel 
+                [ngModel]="post?.content"
                 name="content" 
                 #content="ngModel" 
                 placeholder="Post Content"
