--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -10,22 +10,28 @@
 <!--ngForm gives access to form object -->
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 
-<form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+<!-- form group takes the form property from components -->
+<form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-card>
 
+            <div>
+                <button mat-stroke-button type="button" (click)="filePicker.click()">Pick Image</button>
+                <input type="file" #filePicker (change)="onImagePicked($event)">
+            </div>
+
+            <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+                <img [src]="imagePreview" [alt]="form.value.title">
+            </div>
 
             <!-- input field for post's title -->  
             <mat-form-field>
                 <!-- ngModel gives access to form field -->
                 <input 
                 matInput 
-                [ngModel]="post?.title"
+                formControlName="title"
                 type="text" 
-                name="title" 
-                #title="ngModel" 
-                placeholder="Post Title"
-                required>
-                <mat-error *ngIf="title.invalid">Please enter a title</mat-error>
+                placeholder="Post Title">
+                <mat-error *ngIf="form.get('title').invalid">Please enter a title</mat-error>
             </mat-form-field>
         
             <!-- input field for post's content -->        
@@ -33,12 +39,9 @@
                 <textarea 
                 matInput 
                 rows="4" 
-                [ngModel]="post?.content"
-                name="content" 
-                #content="ngModel" 
-                placeholder="Post Content"
-                required></textarea>
-                <mat-error *ngIf="content.invalid">Please enter some content</mat-error>
+                formControlName="content"
+                placeholder="Post Content"></textarea>
+                <mat-error *ngIf="form.get('content').invalid">Please enter some content</mat-error>
             </mat-form-field>   
         
             <button mat-raised-button color="accent" type="submit">Save Post</button>
