--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,5 +5,13 @@
         <li>
             <a mat-button routerLink="/create" routerLinkActive="mat-accent">Add New Post</a>
         </li>
+
+        <li>
+            <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+        </li>
+
+        <li>
+            <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+        </li>
     </ul>
 </mat-toolbar>
