--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -11,11 +11,11 @@
         <p>{{ post.content }}</p>
 
         <!-- actions button -->
-        <mat-action-row>
+        <mat-action-row *ngIf="userIsAuthenticated">
             <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
         </mat-action-row>
 
-        <mat-action-row>
+        <mat-action-row *ngIf="userIsAuthenticated">
             <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
         </mat-action-row>
 
